# easy_jit

./: .gitignore  .travis-old.yml  CMakeLists.txt  Dockerfile  README.md  example.cpp  setup.sh
benchmark/: benchmark.cpp
cmake/: Python.cmake
doc/readme/: README.md.in  update_doc.sh
include/easy/: attributes.h  function_wrapper.h  jit.h  param.h
include/easy/runtime/: BitcodeTracker.h  Context.h  Function.h
pass/: CMakeLists.txt  Easy.cpp  Layout.cpp  StaticPasses.h  Utils.cpp  Utils.h
runtime/: CMakeLists.txt  Context.cpp  Function.cpp  Utils.cpp
runtime/pass/: DevirtualizeConstant.cpp  InlineParameters.cpp  InlineParametersHelper.h
